--- a/myapp/templates/base.html
+++ b/myapp/templates/base.html
@@ -12,11 +12,20 @@
         <div>
             <a href="{{ url_for('product.home') }}">Produkty</a>
         </div>
+        {% for category, message in get_flashed_messages(with_categories=true) %}
+        <div class="alert alert-{{ category }} alert-dismissable">
+            <button type="button">&times;</button>
+            {{ message }}
+        </div>
+        {% endfor %}
     </div>
 </div>
 <div class="container">
     {% block container %}{% endblock %}
 </div>
-
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/2.0.0/jquery.min.js"></script>
+<script src="{{ url_for('static', filename='js/bootstrap.min.js') }}"></script>
+{% block scripts %}
+{% endblock %}
 </body>
 </html>
