--- a/myapp/templates/base.html
+++ b/myapp/templates/base.html
@@ -23,9 +23,9 @@
 <div class="container">
     {% block container %}{% endblock %}
 </div>
-<script src="https://ajax.googleapis.com/ajax/libs/jquery/2.0.0/jquery.min.js"></script>
-<script src="{{ url_for('static', filename='js/bootstrap.min.js') }}"></script>
-{% block scripts %}
-{% endblock %}
+<!--<script src="https://ajax.googleapis.com/ajax/libs/jquery/2.0.0/jquery.min.js"></script>-->
+<!--<script src="{{ url_for('static', filename='js/bootstrap.min.js') }}"></script>-->
+<!--{% block scripts %}-->
+<!--{% endblock %}-->
 </body>
 </html>
