--- a/myapp/templates/product.html
+++ b/myapp/templates/product.html
@@ -3,5 +3,7 @@
 {% block container %}
 <div>
     <h2>{{ product.name }}</h2>
+    <h3>{{ product.category.name }}</h3>
+    <h4>{{ product.price }}</h4>
 </div>
 {% endblock %}
