--- a/myapp/templates/base.html
+++ b/myapp/templates/base.html
@@ -10,7 +10,7 @@
 <div>
     <div>
         <div>
-            <a href="{{ url_for('product.home') }}">Produkty</a>
+            <a href="{{ url_for('catalog.home') }}">Produkty</a>
         </div>
         {% for category, message in get_flashed_messages(with_categories=true) %}
         <div class="alert alert-{{ category }} alert-dismissable">
