--- a/myapp/templates/category.html
+++ b/myapp/templates/category.html
@@ -5,7 +5,7 @@
     <h2>{{ category.name }}</h2>
     <div>
         {% for product in category.products %}
-        {{ product.name }}
+        <a href="{{ url_for('catalog.product',id=product.id }}">{{ product.name }}</a>
         {% endfor %}
     </div>
 </div>
