--- a/myapp/templates/product.html
+++ b/myapp/templates/product.html
@@ -4,6 +4,6 @@
 <div>
     <h2>{{ product.name }}</h2>
     <h3>{{ product.category.name }}</h3>
-    <h4>{{ product.price }}</h4>
+    <h4>{{ product.price | format_currency}}</h4>
 </div>
 {% endblock %}
