--- a/myapp/templates/base.html
+++ b/myapp/templates/base.html
@@ -12,6 +12,9 @@
         <div>
             <a href="{{ url_for('catalog.home') }}">Produkty</a>
         </div>
+                <div>
+            <a href="{{ url_for('catalog.categories') }}">Kategorie</a>
+        </div>
         {% for category, message in get_flashed_messages(with_categories=true) %}
         <div class="alert alert-{{ category }} alert-dismissable">
             <button type="button">&times;</button>
